break checkpoint