@@ -26,106 +26,252 @@ public class AiChatService {
     @Value("${openrouter.api.key}")
     private String openRouterApiKey;
 
-    public AiChatService(ChatMessageRepository chatMessageRepository, ECommerceTool eCommerceTool) {
+    public AiChatService(ChatMessageRepository chatMessageRepository,
+                         ECommerceTool eCommerceTool) {
         this.restTemplate = new RestTemplate();
         this.chatMessageRepository = chatMessageRepository;
         this.eCommerceTool = eCommerceTool;
     }
 
-    // OpenRouter / OpenAI yanıt formatına uygun record yapıları
     public record Message(String role, String content) {}
+
     public record Choice(Message message) {}
+
     public record OpenRouterResponse(List<Choice> choices) {}
 
     public String sendMessage(String prompt) {
-        String finalAiResponse;
+
+        if (prompt == null || prompt.isBlank()) {
+            return "Lütfen bir ürün adı veya ürün URL'si girin.";
+        }
+
         String trimmedPrompt = prompt.trim();
-        String lowerPrompt = trimmedPrompt.toLowerCase();
 
-        // 1. Senaryo: Kullanıcı doğrudan bir ürün URL'si gönderdiyse
-        if (trimmedPrompt.startsWith("http://") || trimmedPrompt.startsWith("https://")) {
-            System.out.println("🤖 Doğrudan URL algılandı, tekil ürün fiyatı çekiliyor...");
-            String scraperResult = eCommerceTool.getProductPrice(trimmedPrompt);
+        /*
+         * 1. Kullanıcı doğrudan ürün URL'si gönderdiyse
+         */
+        if (trimmedPrompt.startsWith("http://")
+                || trimmedPrompt.startsWith("https://")) {
 
-            String analysisPrompt = String.format(
-                    "Aşağıda bir e-ticaret ürün URL'sinden taranan fiyat bilgisi bulunmaktadır. Bu bilgiyi kullanıcıya net ve anlaşılır bir Türkçe ile açıkla:\n\n%s",
-                    scraperResult
-            );
-            finalAiResponse = callOpenRouter(analysisPrompt);
+            System.out.println("🔗 Ürün URL'si algılandı.");
 
-        }
-        // 2. Senaryo: Kullanıcı fiyat, karşılaştırma veya ürün adı ile arama yapıyorsa
-        else if (lowerPrompt.contains("fiyat") || lowerPrompt.contains("karşılaştır") || lowerPrompt.contains("en ucuz") || lowerPrompt.contains("nerede") || lowerPrompt.contains("iphone")) {
-            System.out.println("🤖 Scraper araçları tetikleniyor, dinamik ürün adı ayıklanıyor...");
+            String scraperResult =
+                    eCommerceTool.getProductPrice(trimmedPrompt);
 
-            // Cümledeki dolgu kelimelerini ve eklerini temizleyelim
-            String productName = trimmedPrompt
-                    .replaceAll("(?i)\\b(fiyatı|fiyatları|fiyat|karşılaştırması|karşılaştır|yap|en ucuz|nerede|kaç|için|ne|kadar|arama|bul)\\b", "")
-                    .replace("karşılaştırması", "")
-                    .trim();
+            String analysisPrompt =
+                    """
+                    Aşağıdaki bilgiler bir e-ticaret sitesinden canlı olarak
+                    çekilmiştir.
 
-            if (productName.isBlank()) {
-                productName = "iphone 15";
-            }
+                    %s
 
-            System.out.println("🔍 Arama için temizlenen net ürün adı: " + productName);
+                    Kullanıcıya Türkçe ve kısa bir cevap ver.
 
-            // Scraper'ların topladığı ham fiyat verileri
-            String rawScraperData = eCommerceTool.analyzeProductByName(productName);
+                    Güncel fiyatı belirt.
+                    Önceki fiyat varsa belirt.
+                    İndirim oranı varsa belirt.
 
-            // Toplanan ham verileri OpenRouter'a vererek akıllı bir karşılaştırma raporu hazırlatıyoruz
-            String analysisPrompt = String.format(
-                    "Aşağıda e-ticaret sitelerinden anlık olarak taranmış ürün fiyat bilgileri bulunmaktadır. " +
-                            "Bu verileri analiz et ve kullanıcıya Türkçe olarak hangisinin en ucuz olduğunu, hangi sitede ne kadar olduğunu " +
-                            "net ve düzenli bir karşılaştırma raporu halinde açıkla:\n\n%s",
-                    rawScraperData
-            );
+                    Verilen bilgiler dışında fiyat uydurma.
+                    """.formatted(scraperResult);
 
-            finalAiResponse = callOpenRouter(analysisPrompt);
+            String response = callOpenRouter(analysisPrompt);
 
-        } else {
-            // 3. Diğer genel sohbet istekleri doğrudan OpenRouter'a iletilir
-            finalAiResponse = callOpenRouter(trimmedPrompt);
+            saveMessage(prompt, response);
+
+            return response;
         }
 
-        // Sonucu veritabanına kaydedip dönüyoruz
-        saveMessage(prompt, finalAiResponse);
-        return finalAiResponse;
+        /*
+         * 2. Kullanıcı doğal bir cümle yazdıysa
+         *
+         * Örnek:
+         *
+         * "Casio GR-B300EC-1A'nın fiyatı ne kadar?"
+         * "Casio GR-B300EC-1A nerede daha ucuz?"
+         * "Bu saatin fiyatına bakar mısın Casio GR-B300EC-1A"
+         */
+        System.out.println("🤖 Ürün adı OpenRouter tarafından çıkarılıyor...");
+
+        String productExtractionPrompt =
+                """
+                Aşağıdaki kullanıcı mesajından satın alınmak veya fiyatı
+                araştırılmak istenen ürünün adını/modelini çıkar.
+
+                Kullanıcı mesajı:
+                %s
+
+                Sadece ürün adını döndür.
+                Açıklama yapma.
+                Fiyat kelimesi, soru cümlesi veya başka kelimeler ekleme.
+
+                Örnek:
+                "Casio GR-B300EC-1A'nın fiyatı ne kadar?"
+                -> Casio GR-B300EC-1A
+
+                "iPhone 15 Pro nerede daha ucuz?"
+                -> iPhone 15 Pro
+
+                "Sony WH-1000XM5 fiyatına bakar mısın?"
+                -> Sony WH-1000XM5
+                """.formatted(trimmedPrompt);
+
+        String productName =
+                callOpenRouter(productExtractionPrompt).trim();
+
+        if (productName.isBlank()) {
+
+            String response =
+                    callOpenRouter(trimmedPrompt);
+
+            saveMessage(prompt, response);
+
+            return response;
+        }
+
+        System.out.println(
+                "🔍 Bulunan ürün: " + productName
+        );
+
+        /*
+         * 3. Ürün adıyla bütün scraper'ları çalıştır
+         */
+        String scraperResults =
+                eCommerceTool.analyzeProductByName(productName);
+
+        /*
+         * 4. Scraper sonuçlarını OpenRouter'a gönder
+         */
+        String comparisonPrompt =
+                """
+                Kullanıcı şu ürünün fiyatını araştırıyor:
+
+                %s
+
+                Aşağıdaki bilgiler e-ticaret sitelerine girilerek
+                canlı olarak alınmıştır:
+
+                %s
+
+                Bu bilgileri analiz ederek kullanıcıya Türkçe cevap ver.
+
+                Kurallar:
+                - En ucuz güncel fiyatı açıkça belirt.
+                - Hangi sitede olduğunu belirt.
+                - Diğer sitelerdeki fiyatları kısaca karşılaştır.
+                - Önceki fiyat varsa belirt.
+                - İndirim oranı varsa belirt.
+                - Bir sitede fiyat bulunamadıysa bunu söyleyebilirsin.
+                - Kesinlikle yeni bir fiyat uydurma.
+                - Sadece yukarıdaki scraper sonuçlarını kullan.
+                """.formatted(productName, scraperResults);
+
+        String finalResponse =
+                callOpenRouter(comparisonPrompt);
+
+        /*
+         * 5. Sohbet geçmişine kaydet
+         */
+        saveMessage(prompt, finalResponse);
+
+        return finalResponse;
     }
 
     private String callOpenRouter(String promptContent) {
-        String url = "https://openrouter.ai/api/v1/chat/completions";
 
-        Map<String, Object> requestBody = new HashMap<>();
-        // Test aşamasında düşük token tüketimi ve hızlı yanıt için gpt-3.5-turbo kullanıyoruz
-        requestBody.put("model", "openai/gpt-3.5-turbo");
-        requestBody.put("messages", Collections.singletonList(new Message("user", promptContent)));
+        String url =
+                "https://openrouter.ai/api/v1/chat/completions";
 
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.set("Authorization", "Bearer " + openRouterApiKey);
-        headers.set("HTTP-Referer", "http://localhost:8081");
-        headers.set("X-Title", "AI Price Tracker");
+        Map<String, Object> requestBody =
+                new HashMap<>();
 
-        HttpEntity<Map<String, Object>> request = new HttpEntity<>(requestBody, headers);
+        requestBody.put(
+                "model",
+                "openai/gpt-3.5-turbo"
+        );
+
+        requestBody.put(
+                "messages",
+                Collections.singletonList(
+                        new Message("user", promptContent)
+                )
+        );
+
+        HttpHeaders headers =
+                new HttpHeaders();
+
+        headers.setContentType(
+                MediaType.APPLICATION_JSON
+        );
+
+        headers.set(
+                "Authorization",
+                "Bearer " + openRouterApiKey
+        );
+
+        headers.set(
+                "HTTP-Referer",
+                "http://localhost:8081"
+        );
+
+        headers.set(
+                "X-Title",
+                "AI Price Tracker"
+        );
+
+        HttpEntity<Map<String, Object>> request =
+                new HttpEntity<>(
+                        requestBody,
+                        headers
+                );
 
         try {
-            OpenRouterResponse response = restTemplate.postForObject(url, request, OpenRouterResponse.class);
-            if (response != null && response.choices() != null && !response.choices().isEmpty()) {
-                return response.choices().get(0).message().content();
+
+            OpenRouterResponse response =
+                    restTemplate.postForObject(
+                            url,
+                            request,
+                            OpenRouterResponse.class
+                    );
+
+            if (response != null
+                    && response.choices() != null
+                    && !response.choices().isEmpty()
+                    && response.choices().get(0).message() != null) {
+
+                return response
+                        .choices()
+                        .get(0)
+                        .message()
+                        .content();
             }
+
             return "Yapay zekadan yanıt alınamadı.";
+
         } catch (Exception e) {
+
             e.printStackTrace();
-            return "OpenRouter API bağlantısı sırasında hata oluştu: " + e.getMessage();
+
+            return "OpenRouter API bağlantısı sırasında hata oluştu: "
+                    + e.getMessage();
         }
     }
 
-    private void saveMessage(String prompt, String response) {
-        ChatMessage messageToSave = new ChatMessage();
+    private void saveMessage(
+            String prompt,
+            String response) {
+
+        ChatMessage messageToSave =
+                new ChatMessage();
+
         messageToSave.setUserPrompt(prompt);
         messageToSave.setAiResponse(response);
-        messageToSave.setCreatedAt(LocalDateTime.now());
-        chatMessageRepository.save(messageToSave);
+        messageToSave.setCreatedAt(
+                LocalDateTime.now()
+        );
+
+        chatMessageRepository.save(
+                messageToSave
+        );
     }
 }
+
